Color_game_v2/build_win/logs/build_log_11-Mon-05_15-37.log
======================================== 
===== Build started at 15:37:48.13 ===== 
======================================== 
 
[15:37:48.14] +++++ Compiling Project +++++ 
 
..\game.cpp: In function 'void Awake(GameMemory*)':
..\game.cpp:1024:5: error: 'AllocConsole' was not declared in this scope
     AllocConsole();
     ^~~~~~~~~~~~
 
=======================================
===== Build failed at 15:37:48.59 =====
=======================================
